--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+SX Admin v. 1.0.0.9
+[27.06.2016]
+1. ѕереработан грид
+
 SX Admin v. 1.0.0.8
 [02.06.2016]
 1. ƒобавлены тесты, которые пользователи могут проходить на сайте
