--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+SX Admin v. 1.0.0.12
+[11.08.2016]
+1. Увеличена производительность запросов
+
 SX Admin v. 1.0.0.11
 [31.07.2016]
 1. Добавлен юмор
