--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,8 @@
+SX Admin v. 1.0.0.14
+[01.09.2016]
+1. Увеличена производительность основного сайта
+2. Переработ движок
+
 SX Admin v. 1.0.0.13
 [17.08.2016]
 1. Увеличена производительность основного сайта
