--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,56 +1,63 @@
+п»їSX Admin v. 1.0.0.15
+[06.09.2016]
+1. РџСЂРё РјРЅРѕР¶РµСЃС‚РІРµРЅРЅРѕРј РґРѕР±Р°РІР»РµРЅРёРё С„РѕС‚Рѕ РґРѕР±Р°РІР»СЏСЋС‚СЃСЏ С‚Р°Рє Р¶Рµ РјРµС‚Р°РґР°РЅРЅС‹Рµ Рѕ С„РѕС‚Рѕ (РЅР°РёРјРµРЅРѕРІР°РЅРёРµ, С‚РёРї, СЂР°Р·РјРµСЂ)
+2. Р РµР°Р»РёР·РѕРІР°РЅР° РїРѕРґС‚РІРµСЂР¶РґР°СЋС‰Р°СЏ СЂРµРіРёСЃС‚СЂР°С†РёСЏ РЅРѕРІРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РїРѕ email
+3. Р’ СЂР°Р·РґРµР» "РЎРѕС†СЃРµС‚Рё" РґРѕР±Р°РІР»РµРЅ РїСѓРЅРєС‚ "РЎРµС‚Рё СЃР°Р№С‚Р°" РґР»СЏ СѓРєР°Р·Р°РЅРёСЏ РіСЂСѓРїРї Рё РїСЂРѕС‡РёС… СЃСЃС‹Р»РѕРє РІ СЃРѕС†РёР°Р»СЊРЅС‹С… СЃРµС‚СЏС…, СѓРєР°Р·С‹РІР°СЋС‰РёС… РЅРµРїРѕСЃСЂРµРґСЃС‚РІРµРЅРЅРѕ РЅР° СЃР°Р№С‚
+4. РћС‚РјРµРЅРµРЅР° РїСЂРѕРІРµСЂРєР° РєРѕР»Р»РµРєС†РёР№ РІ С„РёР»СЊС‚СЂР°С… РїСЂРё РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРё РіСЂРёРґР°
+
 SX Admin v. 1.0.0.14
 [01.09.2016]
-1. Увеличена производительность основного сайта
-2. Переработ движок
+1. РЈРІРµР»РёС‡РµРЅР° РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚СЊ РѕСЃРЅРѕРІРЅРѕРіРѕ СЃР°Р№С‚Р°
+2. РџРµСЂРµСЂР°Р±РѕС‚ РґРІРёР¶РѕРє
 
 SX Admin v. 1.0.0.13
 [17.08.2016]
-1. Увеличена производительность основного сайта
-2. Переработ движок
+1. РЈРІРµР»РёС‡РµРЅР° РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚СЊ РѕСЃРЅРѕРІРЅРѕРіРѕ СЃР°Р№С‚Р°
+2. РџРµСЂРµСЂР°Р±РѕС‚ РґРІРёР¶РѕРє
 
 SX Admin v. 1.0.0.12
 [11.08.2016]
-1. Увеличена производительность запросов
+1. РЈРІРµР»РёС‡РµРЅР° РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚СЊ Р·Р°РїСЂРѕСЃРѕРІ
 
 SX Admin v. 1.0.0.11
 [31.07.2016]
-1. Добавлен юмор
+1. Р”РѕР±Р°РІР»РµРЅ СЋРјРѕСЂ
 
 SX Admin v. 1.0.0.10
 [14.07.2016]
-1. Добавлен вывод информации по гриду
+1. Р”РѕР±Р°РІР»РµРЅ РІС‹РІРѕРґ РёРЅС„РѕСЂРјР°С†РёРё РїРѕ РіСЂРёРґСѓ
 
 SX Admin v. 1.0.0.9
 [27.06.2016]
-1. Переработан грид
+1. РџРµСЂРµСЂР°Р±РѕС‚Р°РЅ РіСЂРёРґ
 
 SX Admin v. 1.0.0.8
 [02.06.2016]
-1. Добавлены тесты, которые пользователи могут проходить на сайте
+1. Р”РѕР±Р°РІР»РµРЅС‹ С‚РµСЃС‚С‹, РєРѕС‚РѕСЂС‹Рµ РїРѕР»СЊР·РѕРІР°С‚РµР»Рё РјРѕРіСѓС‚ РїСЂРѕС…РѕРґРёС‚СЊ РЅР° СЃР°Р№С‚Рµ
 
 SX Admin v. 1.0.0.7
 [18.05.2016]
-1. Добавлены аттрибуты проверки вводимых значений на количество слов
-2. Введено ограничение на количество слов для элемента облака тегов (не более 4-х)
+1. Р”РѕР±Р°РІР»РµРЅС‹ Р°С‚С‚СЂРёР±СѓС‚С‹ РїСЂРѕРІРµСЂРєРё РІРІРѕРґРёРјС‹С… Р·РЅР°С‡РµРЅРёР№ РЅР° РєРѕР»РёС‡РµСЃС‚РІРѕ СЃР»РѕРІ
+2. Р’РІРµРґРµРЅРѕ РѕРіСЂР°РЅРёС‡РµРЅРёРµ РЅР° РєРѕР»РёС‡РµСЃС‚РІРѕ СЃР»РѕРІ РґР»СЏ СЌР»РµРјРµРЅС‚Р° РѕР±Р»Р°РєР° С‚РµРіРѕРІ (РЅРµ Р±РѕР»РµРµ 4-С…)
 
 SX Admin v. 1.0.0.6
 [17.05.2016]
-1. Добавлен механизм логирования ошибок
-2. Введено ограничение на тег Title для материалов (от 2 до 8 слов)
+1. Р”РѕР±Р°РІР»РµРЅ РјРµС…Р°РЅРёР·Рј Р»РѕРіРёСЂРѕРІР°РЅРёСЏ РѕС€РёР±РѕРє
+2. Р’РІРµРґРµРЅРѕ РѕРіСЂР°РЅРёС‡РµРЅРёРµ РЅР° С‚РµРі Title РґР»СЏ РјР°С‚РµСЂРёР°Р»РѕРІ (РѕС‚ 2 РґРѕ 8 СЃР»РѕРІ)
 
 SX Admin v. 1.0.0.5
-1. Добавлена статистика входов пользователей в админ-панель 
+1. Р”РѕР±Р°РІР»РµРЅР° СЃС‚Р°С‚РёСЃС‚РёРєР° РІС…РѕРґРѕРІ РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№ РІ Р°РґРјРёРЅ-РїР°РЅРµР»СЊ 
 
 SX Admin v. 1.0.0.4
-1. Добавлен функционал составления списка "черных" адресов. Запросы, поступающие на сайты с таких url автоматически отвергаются сервером.
-2. Добавлена возможность предварительного просмотра редактируемого материала.
+1. Р”РѕР±Р°РІР»РµРЅ С„СѓРЅРєС†РёРѕРЅР°Р» СЃРѕСЃС‚Р°РІР»РµРЅРёСЏ СЃРїРёСЃРєР° "С‡РµСЂРЅС‹С…" Р°РґСЂРµСЃРѕРІ. Р—Р°РїСЂРѕСЃС‹, РїРѕСЃС‚СѓРїР°СЋС‰РёРµ РЅР° СЃР°Р№С‚С‹ СЃ С‚Р°РєРёС… url Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё РѕС‚РІРµСЂРіР°СЋС‚СЃСЏ СЃРµСЂРІРµСЂРѕРј.
+2. Р”РѕР±Р°РІР»РµРЅР° РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ РїСЂРµРґРІР°СЂРёС‚РµР»СЊРЅРѕРіРѕ РїСЂРѕСЃРјРѕС‚СЂР° СЂРµРґР°РєС‚РёСЂСѓРµРјРѕРіРѕ РјР°С‚РµСЂРёР°Р»Р°.
 
 SX Admin v. 1.0.0.3
-1. Для выпадающих списков модернизированы и унифицированы гриды. Гриды поддерживают поиск и пагинацию.
+1. Р”Р»СЏ РІС‹РїР°РґР°СЋС‰РёС… СЃРїРёСЃРєРѕРІ РјРѕРґРµСЂРЅРёР·РёСЂРѕРІР°РЅС‹ Рё СѓРЅРёС„РёС†РёСЂРѕРІР°РЅС‹ РіСЂРёРґС‹. Р“СЂРёРґС‹ РїРѕРґРґРµСЂР¶РёРІР°СЋС‚ РїРѕРёСЃРє Рё РїР°РіРёРЅР°С†РёСЋ.
 
 SX Admin v. 1.0.0.2
-1. Для материалов сайта реализовано динамическое формирование древовидных категорий
+1. Р”Р»СЏ РјР°С‚РµСЂРёР°Р»РѕРІ СЃР°Р№С‚Р° СЂРµР°Р»РёР·РѕРІР°РЅРѕ РґРёРЅР°РјРёС‡РµСЃРєРѕРµ С„РѕСЂРјРёСЂРѕРІР°РЅРёРµ РґСЂРµРІРѕРІРёРґРЅС‹С… РєР°С‚РµРіРѕСЂРёР№
 
 SX Admin v 1.0.0.1
-1. На главной странице панели управления отображаются пользователи, находящиеся на данный момент в панеле управления;
-2. Добавлен функционал динамического формирования групп справочной системы. Группы формируются в виде дерева с бесконечным уровнем вложенности
+1. РќР° РіР»Р°РІРЅРѕР№ СЃС‚СЂР°РЅРёС†Рµ РїР°РЅРµР»Рё СѓРїСЂР°РІР»РµРЅРёСЏ РѕС‚РѕР±СЂР°Р¶Р°СЋС‚СЃСЏ РїРѕР»СЊР·РѕРІР°С‚РµР»Рё, РЅР°С…РѕРґСЏС‰РёРµСЃСЏ РЅР° РґР°РЅРЅС‹Р№ РјРѕРјРµРЅС‚ РІ РїР°РЅРµР»Рµ СѓРїСЂР°РІР»РµРЅРёСЏ;
+2. Р”РѕР±Р°РІР»РµРЅ С„СѓРЅРєС†РёРѕРЅР°Р» РґРёРЅР°РјРёС‡РµСЃРєРѕРіРѕ С„РѕСЂРјРёСЂРѕРІР°РЅРёСЏ РіСЂСѓРїРї СЃРїСЂР°РІРѕС‡РЅРѕР№ СЃРёСЃС‚РµРјС‹. Р“СЂСѓРїРїС‹ С„РѕСЂРјРёСЂСѓСЋС‚СЃСЏ РІ РІРёРґРµ РґРµСЂРµРІР° СЃ Р±РµСЃРєРѕРЅРµС‡РЅС‹Рј СѓСЂРѕРІРЅРµРј РІР»РѕР¶РµРЅРЅРѕСЃС‚Рё
