--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,4 +1,9 @@
-﻿SX Admin v. 1.0.0.15
+﻿SX Admin v. 1.0.0.16
+[13.09.2016]
+1. Релизвано логичное редактирование редиректов сайта
+2. Реализовано удаление неиспользуемых фото
+
+SX Admin v. 1.0.0.15
 [06.09.2016]
 1. При множественном добавлении фото добавляются так же метаданные о фото (наименование, тип, размер)
 2. Реализована подтверждающая регистрация нового пользователя по email
