--- a/SX.WebCore/Resources/Settings.resx
+++ b/SX.WebCore/Resources/Settings.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="adminPanelName" xml:space="preserve">
-    <value>SX Admin</value>
+    <value>goldfish</value>
     <comment>Наименование админ панели</comment>
   </data>
   <data name="adminPanelVersion" xml:space="preserve">
